PROJECT(efs-server)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
INCLUDE_DIRECTORIES(src)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -std=c++17")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++17")

FILE(GLOB_RECURSE SRCS "src/*.cc")

ADD_EXECUTABLE(efs-server ${SRCS})

TARGET_LINK_LIBRARIES(efs-server pthread rocksdb yaml-cpp)

